01- main templates/StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-app-statefulset
  labels:
    app: my-app
spec:
  serviceName: "my-app"
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          image: my-app-image:1.0.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: my-app-storage
              mountPath: /data
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: my-app-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
